Refactor Hero components for improved layout and responsiveness; adjust ImageSection width and add overflow handling

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,10 @@
 @import "tailwindcss";
 
+html{
+  @apply overflow-x-hidden
+}
 body{
-  @apply bg-[#0A0809]
+  @apply bg-[#0A0809] overflow-x-hidden
 }
 .avatar{
   @apply h-[30px] w-[30px] rounded-full absolute  
